--- a/www/scss/_form-contact.scss
+++ b/www/scss/_form-contact.scss
@@ -118,3 +118,74 @@
     }
   }
 }
+
+.form-home {
+  position: relative;
+  .form-contact {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .form-contact__col {
+    &.form-contact__col--left {
+      width: 100%;
+      margin: 0 auto;
+      @media screen and (min-width: 768px) {
+        width: 50%;
+        padding-top: 40px;
+      }
+    }
+  }
+  .form-contact__heading {
+    text-align: center;
+    color: #ffffff;
+    margin-bottom: 40px;
+    @media screen and (min-width: 768px) {
+      margin-bottom: 60px;
+    }
+    @media screen and (min-width: 1440px) {
+      margin-bottom: 80px;
+    }
+    &:after {
+      left: 0;
+      transform: translate3d(0, 0, 0);
+    }
+    &.heading--underline {
+      &:after {
+        left: 50%;
+        transform: translate3d(-50%, 50%, 0);
+      }
+    }
+  }
+  .form-contact__footer {
+    button {
+      margin: 0 auto;
+    }
+  }
+}
+.form-home__figure {
+  padding: 0;
+  margin: 0;
+  max-width: 100%;
+  height: 100vh;
+  max-height: 1080px;
+  &:before {
+    max-width: 100%;
+    padding-top: percentage(1080/1920);
+    @media screen and (max-height: 650px) {
+      height: auto;
+      padding-top: 200%;
+    }
+  }
+  &:after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(#000, 0.75);
+  }
+}
