--- a/www/scss/_hero.scss
+++ b/www/scss/_hero.scss
@@ -11,6 +11,10 @@
   &:before {
     max-width: 100%;
     padding-top: percentage(1080/1920);
+    @media screen and (max-height: 650px) {
+      height: auto;
+      padding-top: 200%;
+    }
   }
   &:after {
     content: '';
@@ -132,16 +136,44 @@
       max-width: 1070px;
       padding: 0 20px;
     }
+    @media screen and (min-width: 1440px) {
+      max-width: 1200px;
+    }
     @media screen and (min-width: 1600px) {
+      width: calc(100% - 200px);
       max-width: 1600px;
-      padding: 0 100px;
+    }
+  }
+
+  .hero__heading {
+    text-align: center;
+    @media screen and (min-width: 1024px) {
+      text-align: left;
+    }
+  }
+
+  .hero__cta {
+    .button-primary {
+      margin: 0 auto;
+      @media screen and (min-width: 1024px) {
+        margin: 0
+      }
+    }
+  }
+
+  .hero__description {
+    text-align: center;
+    @media screen and (min-width: 1024px) {
+      text-align: left;
     }
   }
 
   .heading--underline {
     &:after {
-      left: 0;
-      transform: translate3d(0, -50%, 0);
+      @media screen and (min-width: 1024px) {
+        left: 0;
+        transform: translate3d(0, -50%, 0);
+      }
     }
   }
 
@@ -199,7 +231,6 @@
   }
   .hero__clip {
     width: 100%;
-    min-width: 100vw;
     height: 100%;
     position: absolute;
     top: 0;
@@ -249,6 +280,14 @@
 }
 
 .hero--sub-title {
+  .hero__inner {
+    @media screen and (min-width: 1280px) {
+      top: 30%;
+    }
+  }
+  .hero__figure {
+    filter: grayscale(0%);
+  }
   a {
     margin: 0 auto;
   }
