--- a/www/scss/_form-contact.scss
+++ b/www/scss/_form-contact.scss
@@ -165,11 +165,12 @@
     }
   }
 }
+
 .form-home__figure {
   padding: 0;
   margin: 0;
   max-width: 100%;
-  height: 100vh;
+  height: auto;
   max-height: 1080px;
   &:before {
     max-width: 100%;
