--- a/www/scss/_card-client.scss
+++ b/www/scss/_card-client.scss
@@ -127,6 +127,7 @@
   .card__heading {
     margin-bottom: 30px;
     text-align: center;
+    text-transform: uppercase;
     @media screen and (min-width: 768px) {
     }
     @media screen and (min-width: 1024px) {
@@ -178,6 +179,10 @@
   }
   .card__slide {
     position: relative;
+    justify-content: flex-end;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
   }
   .card__bg-figure {
     width: 70%;
@@ -270,6 +275,9 @@
     }
     .card__block-slide {
       justify-content: flex-start;
+    }
+    .card__slide {
+      align-items: flex-start;
     }
     .card__col {
       &.card__col--left {
