--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 @font-face {
+  font-family: 'League Gothic';
+  src: url("../fonts/LeagueGothicRegular.ttf") format("ttf"), url("../fonts/LeagueGothic-Regular.otf") format("otf"), url("../fonts/LeagueGothicRegular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
   font-family: 'Maison Neue';
   src: url("../fonts/MaisonNeue-Medium.woff2") format("woff2"), url("../fonts/MaisonNeue-Medium.woff") format("woff"), url("../fonts/MaisonNeue-Medium.ttf") format("truetype");
   font-weight: normal;
