--- a/www/assets/scss/_app.scss
+++ b/www/assets/scss/_app.scss
@@ -1,4 +1,11 @@
-
+@font-face {
+  font-family: 'League Gothic';
+  src: url('../fonts/LeagueGothicRegular.ttf') format('ttf'),
+  url('../fonts/LeagueGothic-Regular.otf') format('otf'),
+  url('../fonts/LeagueGothicRegular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 
 @font-face {
   font-family: 'Maison Neue';
