--- a/www/assets/scss/_form-contact.scss
+++ b/www/assets/scss/_form-contact.scss
@@ -123,16 +123,16 @@
   position: relative;
   .form-contact {
     width: 100%;
-    height: 100%;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-50%, -50%, 0);
   }
   .form-contact__col {
     &.form-contact__col--left {
       width: 100%;
       margin: 0 auto;
-      @media screen and (min-width: 768px) {
+      @media screen and (min-width: 1024px) {
         width: 50%;
         padding-top: 40px;
       }
@@ -175,9 +175,14 @@
   &:before {
     max-width: 100%;
     padding-top: percentage(1080/1920);
-    @media screen and (max-height: 650px) {
-      height: auto;
-      padding-top: 200%;
+    @media screen and (max-width: 1024px) {
+      min-height: 100vh;
+    }
+    @media screen and (min-width: 1280px) {
+      padding-top: 80.25%;
+    }
+    @media screen and (min-width: 1440px) {
+      padding-top: percentage(1080/1920)
     }
   }
   &:after {
