--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -32,7 +32,7 @@ body {
       font-size: 26px; } }
   @media screen and (min-width: 1500px) {
     .sub-title, .title, .header-title {
-      font-size: 30px; } }
+      font-size: 28px; } }
 
 .title, .header-title {
   font-family: "League Gothic"; }
@@ -41,34 +41,34 @@ body {
   text-transform: uppercase; }
 
 .heading {
-  font-size: 78px;
+  font-size: 68px;
   font-family: "League Gothic";
   font-weight: normal;
   letter-spacing: 1.9px;
   text-transform: uppercase; }
   @media screen and (min-width: 1280px) {
     .heading {
-      font-size: 112px; } }
+      font-size: 100px; } }
   @media screen and (min-width: 1440px) {
     .heading {
-      font-size: 126px; } }
+      font-size: 120px; } }
   @media screen and (min-width: 1500px) {
     .heading {
-      font-size: 146px; } }
+      font-size: 136px; } }
 
 .sub-heading {
   font-family: "League Gothic";
-  font-size: 60px;
+  font-size: 50px;
   letter-spacing: 1.7px; }
   @media screen and (min-width: 1024px) {
     .sub-heading {
-      font-size: 64px; } }
+      font-size: 62px; } }
   @media screen and (min-width: 1440px) {
     .sub-heading {
-      font-size: 68px; } }
+      font-size: 65px; } }
   @media screen and (min-width: 1500px) {
     .sub-heading {
-      font-size: 72px; } }
+      font-size: 70px; } }
 
 .p, .link-menu, .sub-link {
   font-size: 16px;
@@ -124,16 +124,16 @@ body {
       .heading--underline:after {
         bottom: -20px; } }
 
-.container {
+.container, .hero--video .hero__inner, .card .card__container {
   padding: 0 20px; }
   @media screen and (min-width: 768px) {
-    .container {
+    .container, .hero--video .hero__inner, .card .card__container {
       padding: 0 40px; } }
   @media screen and (min-width: 1024px) {
-    .container {
+    .container, .hero--video .hero__inner, .card .card__container {
       padding: 0 70px; } }
   @media screen and (min-width: 1440px) {
-    .container {
+    .container, .hero--video .hero__inner, .card .card__container {
       padding: 0 90px; } }
 
 .logo__figure {
@@ -193,15 +193,16 @@ body {
     display: inline-block; }
 
 .button, .button-primary, .button-secondary {
+  display: block;
   height: 64px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  line-height: 64px;
   color: #ffffff;
   text-align: center;
   transition: all 0.5s ease-in-out;
   border-radius: 3px;
   font-weight: 700; }
+  .button:active, .button-primary:active, .button-secondary:active {
+    outline: none; }
 
 .button-primary {
   max-width: 326px;
@@ -268,6 +269,29 @@ body.header__menu-active {
   body.header__menu-active button.button-header i.fa-header-custom:before {
     content: "" !important; }
 
+.tv {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  overflow: hidden; }
+
+.tv .screen {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  margin: auto;
+  opacity: 0;
+  transition: opacity 0.5s; }
+
+.tv .screen.active {
+  opacity: 1; }
+
 .hero__container {
   position: relative; }
 
@@ -275,17 +299,21 @@ body.header__menu-active {
   padding: 0;
   margin: 0;
   max-width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   max-height: 1080px;
   -webkit-filter: grayscale(100%);
           filter: grayscale(100%); }
+  @media screen and (min-width: 1024px) {
+    .hero__figure {
+      min-height: 100%;
+      height: 100vh; } }
   .hero__figure:before {
     max-width: 100%;
     padding-top: 56.25%; }
     @media screen and (max-height: 650px) {
       .hero__figure:before {
         height: auto;
-        padding-top: 200%; } }
+        min-height: 100vh; } }
   .hero__figure:after {
     content: '';
     width: 100%;
@@ -386,19 +414,11 @@ body.header__menu-active {
       margin-bottom: 60px; } }
 
 .hero--video .hero__inner {
+  max-width: 100%;
+  width: 100%;
   display: flex;
-  align-items: center; }
-  @media screen and (min-width: 1024px) {
-    .hero--video .hero__inner {
-      max-width: 1070px;
-      padding: 0 20px; } }
-  @media screen and (min-width: 1440px) {
-    .hero--video .hero__inner {
-      max-width: 1200px; } }
-  @media screen and (min-width: 1600px) {
-    .hero--video .hero__inner {
-      width: calc(100% - 200px);
-      max-width: 1600px; } }
+  align-items: center;
+  box-sizing: border-box; }
 
 .hero--video .hero__heading {
   text-align: center; }
@@ -473,14 +493,13 @@ body.header__menu-active {
     max-width: 900px; } }
 
 .hero--video .hero__clip {
-  width: 100%;
-  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 2;
-  -o-object-fit: cover;
-     object-fit: cover; }
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  overflow: hidden; }
 
 .hero--video .hero__video {
   width: 100%;
@@ -707,20 +726,6 @@ body.header__menu-active {
   @media screen and (min-width: 1440px) {
     .card {
       padding: 120px 0; } }
-  .card .card__container {
-    padding: 0 20px; }
-    @media screen and (min-width: 768px) {
-      .card .card__container {
-        padding: 0 40px; } }
-    @media screen and (min-width: 1024px) {
-      .card .card__container {
-        padding: 0 60px; } }
-    @media screen and (min-width: 1280px) {
-      .card .card__container {
-        padding: 0 80px; } }
-    @media screen and (min-width: 1440px) {
-      .card .card__container {
-        padding: 0 100px; } }
   @media screen and (min-width: 1024px) {
     .card .card__row {
       display: flex;
@@ -825,13 +830,18 @@ body.header__menu-active {
     justify-content: flex-end;
     margin-bottom: 30px; }
   .card .card__list {
-    width: 80%;
-    display: inline-block; }
+    width: 100%; }
+    @media screen and (min-width: 1024px) {
+      .card .card__list {
+        width: 80%; } }
   .card .card__hide-bg {
     width: 100%;
     position: absolute;
     top: 34px;
     left: 0; }
+    @media screen and (max-width: 1023px) {
+      .card .card__hide-bg {
+        display: none; } }
   .card .card__block-footer {
     width: 100%;
     display: flex;
@@ -899,10 +909,11 @@ body.header__menu-active {
         flex: 1;
         padding-right: 50px;
         padding-left: 0; } }
-  .card.card--left-img .card__hide-bg {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end; }
+  @media screen and (min-width: 1024px) {
+    .card.card--left-img .card__hide-bg {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end; } }
   .card.card--left-img .card__description {
     margin-bottom: 20px;
     text-align: center; }
@@ -1165,8 +1176,11 @@ body.header__menu-active {
   @media screen and (min-width: 1440px) {
     .card-title__container {
       padding: 60px 0; } }
+  .page-sub-work .card-title__container {
+    padding: 0; }
 
 .card-title__heading {
+  padding: 0 20px;
   margin-bottom: 40px; }
   @media screen and (min-width: 1024px) {
     .card-title__heading {
@@ -1177,6 +1191,8 @@ body.header__menu-active {
   @media screen and (min-width: 1500px) {
     .card-title__heading {
       margin-bottom: 90px; } }
+  .page-sub-work .card-title__heading {
+    margin-bottom: 0px; }
   .card-title__heading.heading--underline:after {
     bottom: -20px; }
     @media screen and (min-width: 1024px) {
@@ -1518,14 +1534,15 @@ nav.nav {
   position: relative; }
   .form-home .form-contact {
     width: 100%;
-    height: 100%;
     position: absolute;
-    top: 0;
-    left: 0; }
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate3d(-50%, -50%, 0);
+            transform: translate3d(-50%, -50%, 0); }
   .form-home .form-contact__col.form-contact__col--left {
     width: 100%;
     margin: 0 auto; }
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 1024px) {
       .form-home .form-contact__col.form-contact__col--left {
         width: 50%;
         padding-top: 40px; } }
@@ -1559,10 +1576,15 @@ nav.nav {
   .form-home__figure:before {
     max-width: 100%;
     padding-top: 56.25%; }
-    @media screen and (max-height: 650px) {
+    @media screen and (max-width: 1024px) {
       .form-home__figure:before {
-        height: auto;
-        padding-top: 200%; } }
+        min-height: 100vh; } }
+    @media screen and (min-width: 1280px) {
+      .form-home__figure:before {
+        padding-top: 80.25%; } }
+    @media screen and (min-width: 1440px) {
+      .form-home__figure:before {
+        padding-top: 56.25%; } }
   .form-home__figure:after {
     content: '';
     width: 100%;
@@ -1609,6 +1631,8 @@ nav.nav {
   @media screen and (min-width: 1440px) {
     .form-job__footer {
       margin-bottom: 120px; } }
+  .form-job__footer button {
+    margin: 0 auto; }
 
 .gallery__row {
   display: flex;
@@ -1668,7 +1692,10 @@ nav.nav {
   top: 0;
   left: 0;
   z-index: 99;
-  background: #0d0d0d; }
+  transition: all 0.5s ease-in-out; }
+
+.header__scroll {
+  background: rgba(13, 13, 13, 0.85); }
 
 .header__container {
   display: flex;
