--- a/www/assets/scss/_app.scss
+++ b/www/assets/scss/_app.scss
@@ -36,7 +36,7 @@ body {
     font-size: 26px;
   }
   @media screen and (min-width: 1500px) {
-    font-size: 30px;
+    font-size: 28px;
   }
 }
 
@@ -52,34 +52,34 @@ body {
 }
 
 .heading {
-  font-size: 78px;
+  font-size: 68px;
   font-family: "League Gothic";
   font-weight: normal;
   letter-spacing: 1.9px;
   text-transform: uppercase;
   @media screen and (min-width: 1280px) {
-    font-size: 112px;
+    font-size: 100px;
   }
   @media screen and (min-width: 1440px) {
-    font-size: 126px;
+    font-size: 120px;
   }
   @media screen and (min-width: 1500px) {
-    font-size: 146px;
+    font-size: 136px;
   }
 }
 
 .sub-heading {
   font-family: "League Gothic";
-  font-size: 60px;
+  font-size: 50px;
   letter-spacing: 1.7px;
   @media screen and (min-width: 1024px) {
-    font-size: 64px;
+    font-size: 62px;
   }
   @media screen and (min-width: 1440px) {
-    font-size: 68px;
+    font-size: 65px;
   }
   @media screen and (min-width: 1500px) {
-    font-size: 72px;
+    font-size: 70px;
   }
 }
 
@@ -230,15 +230,17 @@ body {
 }
 
 .button {
+  display: block;
   height: 64px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  line-height: 64px;
   color: #ffffff;
   text-align: center;
   transition: all 0.5s ease-in-out;
   border-radius: 3px;
   font-weight: 700;
+  &:active {
+    outline: none;
+  }
 }
 
 .button-primary {
@@ -332,3 +334,29 @@ body.header__menu-active {
     }
   }
 }
+
+
+.tv {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.tv .screen {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  margin: auto;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+.tv .screen.active {
+  opacity: 1;
+}
+
