--- a/www/assets/scss/_header.scss
+++ b/www/assets/scss/_header.scss
@@ -4,7 +4,11 @@
   top: 0;
   left: 0;
   z-index: 99;
-  background: #0d0d0d;
+  transition: all 0.5s ease-in-out;
+}
+
+.header__scroll {
+  background: rgba(#0d0d0d, 0.85);
 }
 
 .header__container {
