--- a/www/assets/scss/_hero.scss
+++ b/www/assets/scss/_hero.scss
@@ -5,15 +5,19 @@
   padding: 0;
   margin: 0;
   max-width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   max-height: 1080px;
   filter: grayscale(100%);
+  @media screen and (min-width: 1024px) {
+    min-height: 100%;
+    height: 100vh;
+  }
   &:before {
     max-width: 100%;
     padding-top: percentage(1080/1920);
     @media screen and (max-height: 650px) {
       height: auto;
-      padding-top: 200%;
+      min-height: 100vh;
     }
   }
   &:after {
@@ -130,19 +134,12 @@
 
 .hero--video {
   .hero__inner {
+    @extend .container;
+    max-width: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
-    @media screen and (min-width: 1024px) {
-      max-width: 1070px;
-      padding: 0 20px;
-    }
-    @media screen and (min-width: 1440px) {
-      max-width: 1200px;
-    }
-    @media screen and (min-width: 1600px) {
-      width: calc(100% - 200px);
-      max-width: 1600px;
-    }
+    box-sizing: border-box;
   }
 
   .hero__heading {
@@ -230,13 +227,13 @@
     }
   }
   .hero__clip {
-    width: 100%;
-    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 2;
-    object-fit: cover;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
   }
 
   .hero__video {
