--- a/www/assets/scss/_card-client.scss
+++ b/www/assets/scss/_card-client.scss
@@ -57,9 +57,11 @@
 .card {
   padding: 80px 0;
   background: #0d0d0d;
+  border-bottom: 1px solid rgba(234, 234, 234, 0.06);
   @media screen and (min-width: 768px) {
   }
   @media screen and (min-width: 1024px) {
+    border-bottom: 0;
   }
   @media screen and (min-width: 1280px) {
     padding: 100px 0;
@@ -74,6 +76,34 @@
     @media screen and (min-width: 1024px) {
       display: flex;
       align-items: stretch;
+    }
+  }
+  .card__item {
+    width: 500px;
+    height: 300px;
+    @media screen and (min-width: 768px) {
+      width: 768px;
+      height: 400px;
+    }
+    @media screen and (min-width: 1024px) {
+      width: 500px;
+      height: 350px;
+    }
+    @media screen and (min-width: 1280px) {
+      width: 700px;
+      height: 400px;
+    }
+    @media screen and (min-width: 1500px) {
+      width: 834px;
+      height: 440px;
+    }
+    @media screen and (min-width: 1635px) {
+      width: 834px;
+      height: 480px;
+    }
+    img {
+      width: 100%;
+      height: 100%;
     }
   }
   .card__col {
@@ -221,9 +251,9 @@
   }
   .card__block-footer {
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    height: 37px;
+    line-height: 37px;
+    text-align: right;
     @media screen and (min-width: 1024px) {
       width: 80%;
     }
@@ -231,26 +261,29 @@
   .card__block-button {
     display: flex;
   }
-  .card__button-slider {
+  .flickity-button.flickity-prev-next-button {
     width: 32px;
     height: 32px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-right: 10px;
     background: transparent;
     border: 1px solid #ff0000;
+    border-radius: 0%;
+    bottom: -80px;
     transition: all 0.5s ease-in-out;
-    i {
-      font-size: 20px;
-      color: #ff0000;
+    &.previous {
+      left: 0;
+      top: auto;
+    }
+    &.next {
+      right: auto;
+      top: auto;
+      left: 50px;
+    }
+    .flickity-button-icon {
+      fill: #fff;
       transition: all 0.5s ease-in-out;
     }
     &:hover {
       background: #ff0000;
-      i {
-        color: #fff;
-      }
     }
   }
   .card__number {
@@ -264,7 +297,7 @@
       flex-direction: row-reverse;
     }
     .card__block-footer {
-      flex-direction: row-reverse;
+      text-align: left;
     }
     .card__block-slide {
       justify-content: flex-start;
@@ -272,24 +305,28 @@
     .card__slide {
       align-items: flex-start;
     }
+    .flickity-button.flickity-prev-next-button {
+      left: auto;
+      &.previous {
+        right: 50px;
+      }
+      &.next {
+        right: 0;
+      }
+    }
     .card__col {
       &.card__col--left {
         width: 100%;
         margin-bottom: 40px;
         color: #fff;
+        text-align: left;
         @media screen and (min-width: 1024px) {
           width: 40%;
           margin-bottom: 0;
-          display: flex;
-          align-items: flex-end;
-          justify-content: center;
-          flex-direction: column;
         }
         .card__footer {
           @media screen and (min-width: 1024px) {
             width: 100%;
-            display: flex;
-            justify-content: flex-end;
           }
           .button-primary {
             @media screen and (min-width: 1024px) {
@@ -357,6 +394,7 @@
     }
   }
 }
+
 
 
 
