--- a/www/assets/scss/_header.scss
+++ b/www/assets/scss/_header.scss
@@ -94,14 +94,19 @@
         background-position: 0%;
       }
     }
+    &.active {
+      color: #ff0000;
+      -webkit-text-fill-color: unset;
+    }
     &.header__social {
       margin-right: 20px;
       -webkit-background-clip: unset;
       -webkit-text-fill-color: unset;
       background: none;
+      color: #888;
       &:hover {
         i {
-          color: #ff0000;
+          color: #fff;
         }
       }
       i {
