--- a/www/assets/scss/_card-client.scss
+++ b/www/assets/scss/_card-client.scss
@@ -351,6 +351,12 @@
         justify-content: flex-end;
       }
     }
+    .card__footer {
+      @media screen and (min-width: 1024px) {
+        display: flex;
+        justify-content: flex-end;
+      }
+    }
     .card__description {
       margin-bottom: 20px;
       text-align: center;
