--- a/www/assets/scss/_card-client.scss
+++ b/www/assets/scss/_card-client.scss
@@ -78,29 +78,81 @@
       align-items: stretch;
     }
   }
-  .card__item {
-    width: 500px;
-    height: 300px;
+  .flickity-viewport {
+    height: 300px!important;
     @media screen and (min-width: 768px) {
-      width: 768px;
-      height: 400px;
+      height: 400px!important;
     }
     @media screen and (min-width: 1024px) {
-      width: 500px;
-      height: 350px;
+      height: 350px!important;
     }
     @media screen and (min-width: 1280px) {
-      width: 700px;
-      height: 400px;
+      height: 400px!important;
     }
     @media screen and (min-width: 1500px) {
-      width: 834px;
-      height: 440px;
+      height: 440px!important;
     }
     @media screen and (min-width: 1635px) {
-      width: 834px;
-      height: 480px;
+      height: 480px!important;
     }
+  }
+  .card__item {
+    width: 80%;
+    height: 200px;
+    top: 50%;
+    right: 225%;
+    transform: translateY(-50%);
+    @media screen and (min-width: 768px) {
+    /*width: 768px;*/
+    height: 300px;
+    }
+    @media screen and (min-width: 1024px) {
+      /*width: 500px;*/
+      height: 250px;
+    }
+    @media screen and (min-width: 1280px) {
+      /*width: 700px;*/
+      height: 300px;
+    }
+    @media screen and (min-width: 1500px) {
+      /*width: 834px;*/
+      height: 340px;
+    }
+    @media screen and (min-width: 1635px) {
+      /*width: 834px;*/
+      height: 380px;
+    }
+    img {
+      filter: grayscale(100%);
+    }
+    &.is-selected {
+      height: 300px;
+      right: 150%;
+      @media screen and (min-width: 768px) {
+      /*width: 768px;*/
+        height: 400px;
+      }
+      @media screen and (min-width: 1024px) {
+        /*width: 500px;*/
+        height: 350px;
+      }
+      @media screen and (min-width: 1280px) {
+        /*width: 700px;*/
+        height: 400px;
+      }
+      @media screen and (min-width: 1500px) {
+        /*width: 834px;*/
+        height: 440px;
+      }
+      @media screen and (min-width: 1635px) {
+        /*width: 834px;*/
+        height: 480px;
+      }
+      img {
+        filter: grayscale(0%);
+      }
+    }
+    
     img {
       width: 100%;
       height: 100%;
@@ -269,11 +321,11 @@
     border-radius: 0%;
     bottom: -80px;
     transition: all 0.5s ease-in-out;
-    &.previous {
+    &.next {
       left: 0;
       top: auto;
     }
-    &.next {
+    &.previous {
       right: auto;
       top: auto;
       left: 50px;
@@ -307,10 +359,10 @@
     }
     .flickity-button.flickity-prev-next-button {
       left: auto;
-      &.previous {
+      &.next {
         right: 50px;
       }
-      &.next {
+      &.previous {
         right: 0;
       }
     }
