--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -352,6 +352,41 @@ body.header__menu-active {
 .flickity-page-dots {
   display: none; }
 
+.pagination {
+  width: 100%;
+  margin-top: 30px;
+  text-align: center; }
+  .pagination li {
+    margin: 0 5px;
+    display: inline-block;
+    position: relative; }
+    .pagination li a {
+      color: #0d0d0d; }
+
+.videopopupjs {
+  background-color: #111517 !important;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  .videopopupjs .videopopupjs__content {
+    margin-top: 10px; }
+  .videopopupjs .videopopupjs__close {
+    width: 100% !important;
+    text-align: right; }
+    .videopopupjs .videopopupjs__close:after {
+      content: none !important; }
+    .videopopupjs .videopopupjs__close .video__bars {
+      width: 30px;
+      height: 3px;
+      display: inline-block;
+      background: #fff; }
+      .videopopupjs .videopopupjs__close .video__bars:first-child {
+        -webkit-transform: translateX(30.5px) rotate(-45deg);
+                transform: translateX(30.5px) rotate(-45deg); }
+      .videopopupjs .videopopupjs__close .video__bars:last-child {
+        -webkit-transform: translateX(0.55px) rotate(45deg);
+                transform: translateX(0.55px) rotate(45deg); }
+
 .hero__container {
   position: relative; }
 
@@ -381,7 +416,8 @@ body.header__menu-active {
     position: absolute;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.75); }
+    background-color: rgba(0, 0, 0, 0.75);
+    z-index: 2; }
 
 .hero__inner {
   width: calc(100% - 40px);
@@ -438,7 +474,8 @@ body.header__menu-active {
     position: absolute;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.3); }
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 2; }
 
 .hero-image__inner {
   width: calc(100% - 40px);
@@ -884,7 +921,9 @@ body.header__menu-active {
                 filter: grayscale(0%); }
     .card .card__item img {
       width: 100%;
-      height: 100%; }
+      height: 100%;
+      -o-object-fit: cover;
+         object-fit: cover; }
   .card .card__col.card__col--left {
     width: 100%;
     margin-bottom: 40px;
@@ -1015,10 +1054,10 @@ body.header__menu-active {
     border-radius: 0%;
     bottom: -80px;
     transition: all 0.5s ease-in-out; }
-    .card .flickity-button.flickity-prev-next-button.next {
+    .card .flickity-button.flickity-prev-next-button.previous {
       left: 0;
       top: auto; }
-    .card .flickity-button.flickity-prev-next-button.previous {
+    .card .flickity-button.flickity-prev-next-button.next {
       right: auto;
       top: auto;
       left: 50px; }
@@ -1041,9 +1080,9 @@ body.header__menu-active {
     align-items: flex-start; }
   .card.card--left-img .flickity-button.flickity-prev-next-button {
     left: auto; }
-    .card.card--left-img .flickity-button.flickity-prev-next-button.next {
-      right: 50px; }
     .card.card--left-img .flickity-button.flickity-prev-next-button.previous {
+      right: 50px; }
+    .card.card--left-img .flickity-button.flickity-prev-next-button.next {
       right: 0; }
   .card.card--left-img .card__col.card__col--left {
     width: 100%;
