--- a/www/assets/scss/_card-client.scss
+++ b/www/assets/scss/_card-client.scss
@@ -156,6 +156,7 @@
     img {
       width: 100%;
       height: 100%;
+      object-fit: cover;
     }
   }
   .card__col {
@@ -321,11 +322,11 @@
     border-radius: 0%;
     bottom: -80px;
     transition: all 0.5s ease-in-out;
-    &.next {
+    &.previous {
       left: 0;
       top: auto;
     }
-    &.previous {
+    &.next {
       right: auto;
       top: auto;
       left: 50px;
@@ -359,10 +360,10 @@
     }
     .flickity-button.flickity-prev-next-button {
       left: auto;
-      &.next {
+      &.previous {
         right: 50px;
       }
-      &.previous {
+      &.next {
         right: 0;
       }
     }
