--- a/www/assets/scss/_hero.scss
+++ b/www/assets/scss/_hero.scss
@@ -28,6 +28,7 @@
     top: 0;
     left: 0;
     background-color: rgba(#000, 0.75);
+    z-index: 2;
   }
 }
 
@@ -92,6 +93,7 @@
     top: 0;
     left: 0;
     background-color: rgba(#000, 0.3);
+    z-index: 2;
   }
 }
 
